--- a/symba-webapp/pom.xml
+++ b/symba-webapp/pom.xml
@@ -36,7 +36,7 @@
         </dependency>
         <dependency>
             <groupId>${application.package}</groupId>
-            <artifactId>symba-lsid-ws-assigner</artifactId>
+            <artifactId>symba-lsid-ws-api</artifactId>
             <version>${application.version}</version>
         </dependency>
         <!-- GWT upload used under the Apache License 2.0 http://www.apache.org/licenses/LICENSE-2.0 -->
