--- a/symba-db/pom.xml
+++ b/symba-db/pom.xml
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
-            <version>3.0.1.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
         <!-- @Nullable, @NotNull documentation annotations -->
         <dependency>
@@ -47,7 +47,7 @@
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
-            <version>1.5.4</version>
+            <version>1.6.9</version>
         </dependency>
     </dependencies>
 
