--- a/pom.xml
+++ b/pom.xml
@@ -395,23 +395,23 @@
         </profile>
     </profiles>
     <repositories>
-        <repository>
+        <!--<repository>
             <id>maven2-repository.dev.java.net</id>
             <name>Java.net Maven 2 Repository</name>
             <url>http://download.java.net/maven/2</url>
-        </repository>
-        <repository>
+	</repository>-->
+	<!--<repository>
             <id>carmen</id>
             <name>Carmen release repository</name>
             <url>http://carmen.ncl.ac.uk/maven/repo</url>
-        </repository>
+	</repository>-->
     </repositories>
     <pluginRepositories>
-        <pluginRepository>
+        <!--<pluginRepository>
             <id>maven2-repository.dev.java.net</id>
             <name>Java.net Maven 2 Repository</name>
             <url>http://download.java.net/maven/2</url>
-        </pluginRepository>
+	</pluginRepository>-->
     </pluginRepositories>
     <prerequisites>
         <maven>2.0.1</maven>
