--- a/symba-jaxb2/pom.xml
+++ b/symba-jaxb2/pom.xml
@@ -82,10 +82,10 @@
     </dependencies>
 
     <repositories>
-        <repository>
+	<!--<repository>
             <id>maven2-repository.dev.java.net</id>
             <url>http://download.java.net/maven/2</url>
-        </repository>
+	</repository>-->
         <repository>
             <id>maven2-repository.jboss.com</id>
             <url>http://repository.jboss.com/maven2</url>
