--- a/symba-webapp/pom.xml
+++ b/symba-webapp/pom.xml
@@ -105,8 +105,8 @@
         <!--</dependency>-->
         <dependency>
             <groupId>com.trilead</groupId>
-            <artifactId>ssh2</artifactId>
-            <version>build213</version>
+            <artifactId>trilead-ssh2</artifactId>
+            <version>1.0.0-build215</version>
             <!--<scope>compile</scope>
             <systemPath>${basedir}/../dpi/src/main/lib/ganymed-ssh2-build210.jar</systemPath>-->
         </dependency>
